--- a/views/add_form.erb
+++ b/views/add_form.erb
@@ -1,12 +1,18 @@
 <h1>New addition</h1>
 
 <form action="/wizard_add">
+
   <label for="form_first_number">
     Add this:
   </label>
-  <input id="form_first_number" name="first_number" text="text">
+  <input id="form_first_number" type="text" name ="first_number">
 
-  <button>
+  <label for="form_second_number">
+    to this:
+  </label>
+  <input id="form_second_number" type="text" name="second_number">
+
+  <button type="submit">
     Add!
   </button>
 </form>
