--- a/views/div_form.erb
+++ b/views/div_form.erb
@@ -1,9 +1,9 @@
-<h1>New multiplication</h1>
+<h1>New division</h1>
 
-<form action="/wizard_multiply">
+<form action="/wizard_divide">
 
   <label for="form_first_number">
-    Multiply this:
+    Divide this:
   </label>
   <input id="form_first_number" type="text" name ="first_number">
 
@@ -13,6 +13,6 @@
   <input id="form_second_number" type="text" name="second_number">
 
   <button type="submit">
-    Multiply!
+    Divide!
   </button>
 </form>
